--- a/app/src/main/res/layout/fragment_timetable.xml
+++ b/app/src/main/res/layout/fragment_timetable.xml
@@ -80,10 +80,11 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/timetableTypeNameTV"
+                            android:id="@+id/groupChooseButton"
                             style="@style/txtRobotomedium12"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:clickable="true"
                             android:gravity="center"
                             android:letterSpacing="0.01"
                             android:lineSpacingExtra="@dimen/_1pxh"
@@ -200,7 +201,7 @@
                         tools:text="@string/lbl4" />
 
                     <TextView
-                        android:id="@+id/txt241222"
+                        android:id="@+id/dateTV"
                         style="@style/txtRobotomedium14_1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
